--- a/package.json
+++ b/package.json
@@ -1,18 +1,33 @@
 {
-  "name": "assignment1",
+  "name": "assignment3",
   "version": "1.0.0",
   "description": "this is assignment",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "Long Nguyen",
   "license": "MIT",
   "dependencies": {
     "@sendgrid/mail": "^7.4.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-handlebars": "^5.2.0"
-  }
+    "express-fileupload": "^1.2.1",
+    "express-handlebars": "^5.2.1",
+    "express-session": "^1.17.1",
+    "mongoose": "^5.12.2"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/knight1972001/web322-assignment.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/knight1972001/web322-assignment/issues"
+  },
+  "homepage": "https://github.com/knight1972001/web322-assignment#readme"
 }
