--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express-fileupload": "^1.2.1",
     "express-handlebars": "^5.2.1",
     "express-session": "^1.17.1",
-    "mongoose": "^5.12.2"
+    "mongoose": "^5.12.2",
+    "popups": "^1.1.3"
   },
   "devDependencies": {},
   "repository": {
